@@ -9,6 +9,7 @@ import xyz.aweirdwhale.utils.log.logger;
 import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
@@ -18,7 +19,7 @@ import java.util.Iterator;
 
 public class Downloader {
 
-    private static final String SERVER = "http://" + getServerUrl.SERVER;
+    private static final String SERVER = "https://" + getServerUrl.SERVER;
     private static final String PORT = ":6969";
     private static final String FABRIC_URL = SERVER + PORT + "/public/fabric-loader/fabric.jar";
     private static final String FABRIC_JSON_URL = SERVER + PORT + "/public/fabric-loader/fabric.json";
@@ -27,13 +28,13 @@ public class Downloader {
     private static final String MODS_JSON_URL = SERVER + PORT + "/public/mods.json";
 
     // URL de base pour télécharger les assets (modifiez si votre serveur privé est différent)
-    private static final String ASSET_BASE_URL = "http://resources.download.minecraft.net";
+    private static final String ASSET_BASE_URL = "https://resources.download.minecraft.net";
 
     /**
      * Télécharge la version requise du jeu sous Fabric.
      */
     public static void downloadVersions(String path) throws DownloadException {
-        // On suppose que le répertoire path/versions/ existe
+
         downloadFile(FABRIC_URL, path + "/versions/fabric-loader/fabric.jar");
         downloadFile(FABRIC_JSON_URL, path + "/versions/fabric-loader/fabric.json");
 
@@ -60,7 +61,8 @@ public class Downloader {
         }
 
         try {
-            URL url = new URL(MODS_JSON_URL);
+            URI uri = new URI(MODS_JSON_URL);
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
 
@@ -84,7 +86,7 @@ public class Downloader {
             } else {
                 logger.logError("❌ Error (" + connection.getResponseCode() + ") while fetching mods.json", null);
             }
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e ) {
             logger.logError("Error while downloading mods: " + e.getMessage(), e);
             throw new DownloadException("Error while downloading mods: " + e.getMessage());
         }
